fix: corrigindo padrão de projeto nas rotas de documentos e parameters