@@ -1,9 +1,12 @@
 package org.example.model;
 
+import com.google.gson.Gson;
 import org.example.dao.ParametrizacaoIgrejaDao;
 
 import java.sql.Connection;
-import java.sql.SQLException;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 
 public class ParametrizacaoIgreja {
     private Integer id;
@@ -18,47 +21,97 @@ public class ParametrizacaoIgreja {
     private String site;
     private String endereco;
 
-    public static ParametrizacaoIgreja buscar(Connection conn) throws SQLException {
-        ParametrizacaoIgrejaDao dao = new ParametrizacaoIgrejaDao();
-        ParametrizacaoIgreja parametros = dao.buscar(conn);
-        if (parametros == null) {
-            return parametrosPadrao();
+    private static ParametrizacaoIgrejaDao dao;
+
+    public static synchronized ParametrizacaoIgrejaDao getDao(){
+        if(dao == null)
+            dao = new ParametrizacaoIgrejaDao();
+
+        return dao;
+    }
+
+    public ParametrizacaoIgreja() {}
+
+    public static Map<String, String> validarParametrizacao(ParametrizacaoIgreja p){
+        Map<String, String> erros = new LinkedHashMap<>();
+        if(p.getNomeFantasia() == null || p.getNomeFantasia().trim().isEmpty())
+            erros.put("nomeFantasia", "Nome fantasia é obrigatório");
+        return erros;
+    }
+
+    public void cadastrar(Connection conn, ParametrizacaoIgreja p){
+        aplicarDefaults(p);
+        Map<String, String> erros = validarParametrizacao(p);
+        if(!erros.isEmpty())
+            throw new RuntimeException(new Gson().toJson(Map.of("erros", erros)));
+        getDao().cadastrar(conn, p);
+    }
+
+    public void alterar(Connection conn, ParametrizacaoIgreja p){
+        aplicarDefaults(p);
+        Map<String, String> erros = validarParametrizacao(p);
+        if(!erros.isEmpty())
+            throw new RuntimeException(new Gson().toJson(Map.of("erros", erros)));
+        getDao().atualizar(conn, p);
+    }
+
+    public void salvar(Connection conn, ParametrizacaoIgreja p){
+        ParametrizacaoIgreja atual = buscar(conn);
+        if(atual == null || atual.getId() == null)
+            cadastrar(conn, p);
+        else{
+            p.setId(atual.getId());
+            alterar(conn, p);
         }
+    }
+
+    public void salvarLogo(Connection conn, String caminhoLogo){
+        ParametrizacaoIgreja atual = buscar(conn);
+        if(atual == null)
+            atual = parametrosPadrao();
+        atual.setCaminhoLogo(caminhoLogo);
+        salvar(conn, atual);
+    }
+
+    public void excluir(Connection conn, Integer id){
+        if(id == null || id <= 0){
+            throw new IllegalArgumentException("ID inválido.");
+        }
+
+        getDao().excluir(conn, id);
+    }
+
+    public ParametrizacaoIgreja buscarPorId(Connection conn, Integer id){
+        if(id == null || id <= 0){
+            throw new IllegalArgumentException("ID inválido.");
+        }
+
+        return getDao().buscarPorId(conn, id);
+    }
+
+    public ParametrizacaoIgreja buscar(Connection conn){
+        ParametrizacaoIgreja parametros = getDao().buscar(conn);
+        if(parametros == null)
+            return parametrosPadrao();
         return parametros;
     }
 
-    public static ParametrizacaoIgreja salvar(Connection conn, ParametrizacaoIgreja parametros) throws SQLException {
-        validar(parametros);
-        aplicarDefaults(parametros);
-        ParametrizacaoIgrejaDao dao = new ParametrizacaoIgrejaDao();
-        return dao.salvar(conn, parametros);
+    public List<ParametrizacaoIgreja> listarTodos(Connection conn){
+        return getDao().listarTodos(conn);
     }
 
-    public static ParametrizacaoIgreja salvarLogo(Connection conn, String caminhoLogo) throws SQLException {
-        ParametrizacaoIgreja parametros = buscar(conn);
-        parametros.setCaminhoLogo(caminhoLogo);
-        return salvar(conn, parametros);
+    public List<ParametrizacaoIgreja> filtrar(Connection conn, String nomeFantasia){
+        return getDao().listar(conn, nomeFantasia);
     }
 
-    private static void validar(ParametrizacaoIgreja parametros) {
-        if (parametros == null) {
-            throw new IllegalArgumentException("Parâmetros da igreja são obrigatórios.");
-        }
-        if (parametros.getNomeFantasia() == null || parametros.getNomeFantasia().isBlank()) {
-            throw new IllegalArgumentException("Nome fantasia é obrigatório.");
-        }
+    private void aplicarDefaults(ParametrizacaoIgreja p){
+        if(p.getCorPrimaria() == null || p.getCorPrimaria().trim().isEmpty())
+            p.setCorPrimaria("#1f4f82");
+        if(p.getCorSecundaria() == null || p.getCorSecundaria().trim().isEmpty())
+            p.setCorSecundaria("#7d0a1e");
     }
 
-    private static void aplicarDefaults(ParametrizacaoIgreja parametros) {
-        if (parametros.getCorPrimaria() == null || parametros.getCorPrimaria().isBlank()) {
-            parametros.setCorPrimaria("#1f4f82");
-        }
-        if (parametros.getCorSecundaria() == null || parametros.getCorSecundaria().isBlank()) {
-            parametros.setCorSecundaria("#7d0a1e");
-        }
-    }
-
-    private static ParametrizacaoIgreja parametrosPadrao() {
+    private ParametrizacaoIgreja parametrosPadrao(){
         ParametrizacaoIgreja parametros = new ParametrizacaoIgreja();
         parametros.setNomeFantasia("Igreja");
         parametros.setCorPrimaria("#1f4f82");
